--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/images/svalbard.jpg" alt="" /></p>
+        <div class="home"><p><img src="/blog/images/svalbard.jpg" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
