--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
 
 <h2 id="selected-publications">Selected publications</h2>
 <ul>
-  <li><a href="https://www.medrxiv.org/content/10.1101/2020.12.18.20245068v1">Bayesian modeling for the detection of adverse events underreporting in clinical trials</a></li>
+  <li><a href="https://www.medrxiv.org/content/10.1101/2020.12.18.20245068v1">Bayesian modeling for the detection of adverse events underreporting in clinical trials</a> (preprint, submitted to Drug Safety)</li>
   <li><a href="https://link.springer.com/article/10.1007/s40264-019-00831-4">Enabling Data-Driven Clinical Quality Assurance: Predicting Adverse Event Reporting in Clinical Trials Using Machine Learning</a></li>
   <li><a href="https://link.springer.com/article/10.1007/s43441-020-00205-4">Using Statistical Modeling for Enhanced and Flexible Pharmacovigilance Audit Risk Assessment and Planning</a></li>
   <li><a href="https://www.sciencedirect.com/science/article/pii/S0393044013000132">Chern-Simons Theory with Wilson Lines and Boundary in the BV-BFV Formalism</a></li>
