--- a/about/index.html
+++ b/about/index.html
@@ -93,6 +93,10 @@ window.onload = wrap_img;
 
 <p>In my spare time, I enjoy ski touring, mountain biking and cycling, especially in the Swiss Alps where I grew up.</p>
 
+<p>In this blog, I am sharing learnings from my data science and applied mathematics journey, so hopefully you won’t get stuck at the same sticky places.</p>
+
+<p><a href="/blog/images/me_herens.jpg"></a></p>
+
 <h2 id="selected-publications">Selected publications</h2>
 <ul>
   <li><a href="https://www.medrxiv.org/content/10.1101/2020.12.18.20245068v1">Bayesian modeling for the detection of adverse events underreporting in clinical trials</a> (preprint, submitted to Drug Safety)</li>
