--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
 
 <p>In this blog, I am sharing learnings from my data science and applied mathematics journey, so hopefully you won’t get stuck at the same sticky places.</p>
 
-<p><a href="/blog/images/me_herens.jpg"></a></p>
+<p><img align="right" src="images/me_herens.jpg" /></p>
 
 <h2 id="selected-publications">Selected publications</h2>
 <ul>
