--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
 
 <p>In this blog, I am sharing learnings from my data science and applied mathematics journey, so hopefully you won’t get stuck at the same sticky places.</p>
 
-<p><img src="/blog/images/me_herens.jpg" alt="" style="float: right;margin-right: 7px;margin-top: 7px;" /></p>
+<p><img src="/blog/images/me_herens.jpg =100X" alt="" style="float: right;margin-right: 7px;margin-top: 7px;" /></p>
 
 <h2 id="selected-publications">Selected publications</h2>
 <ul>
