--- a/about/index.html
+++ b/about/index.html
@@ -93,9 +93,12 @@ window.onload = wrap_img;
 
 <p>In my spare time, I enjoy ski touring, mountain biking and cycling, especially in the Swiss Alps where I grew up.</p>
 
-<p>In this blog, I am sharing learnings from my data science and applied mathematics journey, so hopefully you won’t get stuck at the same sticky places.</p>
+<p>In this blog, I am sharing learnings from my data science and applied mathematics journey, so hopefully you won’t get stuck to the same sticky places.</p>
 
-<p><img src="/blog/images/me_herens.jpg" alt="" style="float: right;margin-right: 7px;margin-top: 7px;" /></p>
+<p><img src="/blog/images/me_herens.jpg" alt="" style="float: right;margin-right: 7px;margin-top: 20px;" /></p>
+
+<h2 id="get-in-touch">Get in touch</h2>
+<p>You can email me at yves.barma@gmail.com if you add the missing z before @.</p>
 
 <h2 id="selected-publications">Selected publications</h2>
 <ul>
