deploy: 459622eedc16cea0f8e880372a3be169628fa6da

--- a/about/index.html
+++ b/about/index.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
 <p><img src="/blog/images/me_herens.jpg" alt="" style="float: right;margin-right: 7px;margin-top: 20px;" /></p>
 
 <h2 id="get-in-touch">Get in touch</h2>
-<p>You can email me at yves.barma@gmail.com if you add the missing z before @.</p>
+<p>You can email me at yves.barmaz@gmail.com.</p>
 
 <h2 id="selected-publications">Selected publications</h2>
 <ul>
